2007-02-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/gnome-cmd-tags-doc.c:
	* src/tags/gnome-cmd-tags-doc.h:
	* src/tags/gnome-cmd-tags-exif.c:
	* src/tags/gnome-cmd-tags-exif.h:
	* src/tags/gnome-cmd-tags-icc.c:
	* src/tags/gnome-cmd-tags-icc.h:
	* src/tags/gnome-cmd-tags-id3.c:
	* src/tags/gnome-cmd-tags-id3.h:
	* src/tags/gnome-cmd-tags-iptcdata.c:
	* src/tags/gnome-cmd-tags-iptcdata.h:
	* src/tags/gnome-cmd-tags-libs.h:
	Define gcmd_tags_*_is_supported() as macros

2007-02-15  Piotr Eljasiak  <epiotr@use.pl>

	* src/tags/Makefile.am:
	* src/tags/gnome-cmd-tags-exif.c:
	* src/tags/gnome-cmd-tags-exif.h:
	* src/tags/gnome-cmd-tags-icc.c:
	* src/tags/gnome-cmd-tags-icc.h:
	* src/tags/gnome-cmd-tags-iptcdata.c:
	* src/tags/gnome-cmd-tags-iptcdata.h:
	* src/tags/gnome-cmd-tags-libs.c:
	* src/tags/gnome-cmd-tags-libs.h:
	* src/tags/gnome-cmd-tags.c:
	Split gcmd_tags_*() functions into separate files

2007-02-14  Koos Jan Niesink  <kjniesink@yahoo.co.uk>

	* src/tags/gnome-cmd-tags.c:
	Fix build error (partially revert commit #697)

2007-02-05  Piotr Eljasiak  <epiotr@use.pl>

	* src/Makefile.am:
	* src/libgviewer/Makefile.am:
	* tests/gviewer/Makefile.am:
	Link libgviewer library statically

2007-02-03  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* data/gnome-commander.spec.in:
	* src/Makefile.am:
	* src/gnome-cmd-advrename-dialog.c:
	* src/gnome-cmd-advrename-lexer.l:
	* src/gnome-cmd-file.c:
	* src/gnome-cmd-file.h:
	* src/main.c:
	* src/tags/Makefile.am:
	* src/tags/gnome-cmd-tags-audio.h:
	* src/tags/gnome-cmd-tags-doc.c:
	* src/tags/gnome-cmd-tags-doc.h:
	* src/tags/gnome-cmd-tags-id3.h:
	* src/tags/gnome-cmd-tags.c:
	* src/tags/gnome-cmd-tags.h:
	* src/utils.c:
	Added support for OLE and ODF metags in advanced file rename templates

2007-02-01  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* data/gnome-commander.spec.in:
	Added build and runtime deps for python and gnome-python2-gnomevfs

	* src/gnome-cmd-python-plugin.c:
	Fixed build warning
